# MerlinEngine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
Assets/Shaders/: basic_lit.frag  pbr_lit_basic.frag  pbr_lit_basic.vert  pbr_lit_texture.frag  shadow.vert  skybox.vert
Demo/: CMakeLists.txt
Demo/include/: uv_sphere.hpp
Demo/source/: main.cpp
Merlin/: CMakeLists.txt
Merlin/Merlin/: dummy.cpp  dummy.hpp
Merlin/Merlin/Core/: app_events.hpp  application.cpp  application.hpp  asset_registry.cpp  asset_registry.hpp  core.hpp  file_util.cpp  file_util.hpp  glfw_input.cpp  glfw_input.hpp  glfw_window.cpp  glfw_window.hpp  imgui_context.cpp  imgui_context.hpp  imgui_layer.cpp  imgui_layer.hpp  input.cpp  input.hpp  input_codes.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  logger.cpp  logger.hpp  uuid.cpp  uuid.hpp  window.cpp  window.hpp
Merlin/Merlin/Platform/GLFW/: glfw_input.cpp  glfw_input.hpp  glfw_window.cpp  glfw_window.hpp
Merlin/Merlin/Platform/OpenGL/: opengl_context.cpp  opengl_context.hpp  opengl_cubemap.cpp  opengl_cubemap.hpp  opengl_frame_buffer.cpp  opengl_frame_buffer.hpp  opengl_index_buffer.cpp  opengl_index_buffer.hpp  opengl_material.cpp  opengl_material.hpp  opengl_render_api.cpp  opengl_render_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture2d.cpp  opengl_texture2d.hpp  opengl_vertex_array.cpp  opengl_vertex_array.hpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.hpp
Merlin/Merlin/Platform/Vulkan/: vulkan_context.cpp  vulkan_context.hpp  vulkan_index_buffer.cpp  vulkan_index_buffer.hpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_logical_device.cpp  vulkan_logical_device.hpp  vulkan_material.cpp  vulkan_material.hpp  vulkan_physical_device.cpp  vulkan_physical_device.hpp  vulkan_render_api.cpp  vulkan_render_api.hpp  vulkan_texture2d.cpp  vulkan_texture2d.hpp  vulkan_util.cpp  vulkan_util.hpp  vulkan_vertex_buffer.cpp  vulkan_vertex_buffer.hpp
Merlin/Merlin/Render/: buffer_data.cpp  buffer_data.hpp  buffer_layout.cpp  buffer_layout.hpp  camera.cpp  camera.hpp  camera_projection.hpp  cubemap.cpp  cubemap.hpp  cubemap_data.cpp  cubemap_data.hpp  frame_buffer.cpp  frame_buffer.hpp  graphics_context.cpp  graphics_context.hpp  index_buffer.cpp  index_buffer.hpp  lighting.hpp  material.cpp  material.hpp  mesh.hpp  mesh_buffer.cpp  mesh_buffer.hpp  mesh_utils.cpp  mesh_utils.hpp  mesh_vertex.hpp  opengl_context.cpp  opengl_context.hpp  opengl_frame_buffer.cpp  opengl_frame_buffer.hpp  opengl_index_buffer.cpp  opengl_render_api.cpp  opengl_render_api.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture2d.cpp  opengl_texture2d.hpp  opengl_vertex_array.cpp  opengl_vertex_buffer.cpp  opengl_vertex_buffer.hpp  (+27 more)
Merlin/Merlin/Scene/: component.hpp  core_components.hpp  entity.cpp  entity.hpp  game_scene.cpp  game_scene.hpp  scene.cpp  scene.hpp  scene_serialization.cpp  scene_serialization.hpp
MerlinEditor/: CMakeLists.txt  asset_explorer_panel.cpp  asset_explorer_panel.hpp  editor_commands.cpp  editor_commands.hpp  editor_gui_layer.cpp  editor_gui_layer.hpp  editor_panel.cpp  editor_panel.hpp  inspector_panel.cpp  inspector_panel.hpp  main.cpp  merlin_editor_app.cpp  merlin_editor_app.hpp  panel.hpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  viewport_panel.cpp  viewport_panel.hpp
Test/: CMakeLists.txt
Test/source/: buffer_data_tests.cpp  cubemap_data_tests.cpp  mesh_test.cpp  test_uuid.cpp  texture2d_tests.cpp  transform_test.cpp
VulkanTest/: CmakeLists.txt
VulkanTest/source/: main.cpp
