
set(MERLIN_SRC
    Merlin/Core/logger.cpp
    Merlin/Core/application.cpp
    Merlin/Core/window.cpp
    Merlin/Core/glfw_window.cpp
    Merlin/Core/input.cpp
    Merlin/Core/glfw_input.cpp
    Merlin/Core/imgui_layer.cpp
    Merlin/Core/layer_stack.cpp
    Merlin/Render/graphics_context.cpp
    Merlin/Render/opengl_context.cpp
    Merlin/Render/vertex_buffer.cpp
    Merlin/Render/opengl_vertex_buffer.cpp
    Merlin/Render/index_buffer.cpp
    Merlin/Render/opengl_index_buffer.cpp
    Merlin/Render/buffer_layout.cpp
    Merlin/Render/vertex_array.cpp
    Merlin/Render/opengl_vertex_array.cpp
    Merlin/Render/texture2d.cpp
    Merlin/Render/opengl_texture2d.cpp
    Merlin/Render/shader.cpp
    Merlin/Render/opengl_shader.cpp
    Merlin/Render/render_api.cpp
    Merlin/Render/opengl_render_api.cpp
    Merlin/Render/renderer.cpp
    Merlin/Render/camera.cpp
    Merlin/Render/perspective_camera.cpp
    Merlin/Render/transform.cpp
    Merlin/Render/frame_buffer.cpp
    Merlin/Render/opengl_frame_buffer.cpp
    Merlin/Scene/scene.cpp
    Merlin/Scene/entity.cpp
)

set(MERLIN_INC
    Merlin/Core/logger.hpp
    Merlin/Core/application.hpp
    Merlin/Core/app_events.hpp
    Merlin/Core/window.hpp
    Merlin/Core/glfw_window.hpp
    Merlin/Core/input_codes.hpp
    Merlin/Core/glfw_input.hpp
    Merlin/Core/input.hpp
    Merlin/Core/layer.hpp
    Merlin/Core/imgui_layer.hpp
    Merlin/Core/layer_stack.hpp
    Merlin/Render/graphics_context.hpp
    Merlin/Render/opengl_context.hpp
    Merlin/Render/vertex_buffer.hpp
    Merlin/Render/opengl_vertex_buffer.hpp
    Merlin/Render/index_buffer.hpp
    Merlin/Render/opengl_index_buffer.hpp
    Merlin/Render/buffer_layout.hpp
    Merlin/Render/vertex_array.hpp
    Merlin/Render/opengl_vertex_array.hpp
    Merlin/Render/texture2d.hpp
    Merlin/Render/opengl_texture2d.hpp
    Merlin/Render/shader.hpp
    Merlin/Render/opengl_shader.hpp
    Merlin/Render/render_api.hpp
    Merlin/Render/opengl_render_api.hpp
    Merlin/Render/renderer.hpp
    Merlin/Render/camera.hpp
    Merlin/Render/perspective_camera.hpp
    Merlin/Render/transform.hpp
    Merlin/Render/lighting.hpp
    Merlin/Render/frame_buffer.hpp
    Merlin/Render/opengl_frame_buffer.hpp
    Merlin/Scene/scene.hpp
    Merlin/Scene/entity.hpp
    Merlin/Scene/component.hpp
    Merlin/Scene/core_components.hpp
)

add_library(Merlin STATIC
    ${MERLIN_SRC}
    ${MERLIN_INC}
)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/spdlog)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glfw)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glad)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/glm)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/imgui)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/stb)

set_property(TARGET Merlin PROPERTY CXX_STANDARD 17)

target_include_directories(Merlin
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)
target_link_libraries(Merlin
    PUBLIC
    glm
    imgui
    PRIVATE
    glad
    spdlog::spdlog
    glfw
    stb
)